Extract arg checking to method; remove unnecessary null checks